--- a/client/src/app/lyrics/lyrics.component.html
+++ b/client/src/app/lyrics/lyrics.component.html
@@ -1,24 +1,68 @@
 <div class="lyrics" style="background-color: #343233; border-radius: 5px">
-    <img src="../../assets/images/creeperawman.png" style="width: 100%">
+    <img src="../../assets/images/creeperawman.png" style="width: 98%">
     <div data-spy="scroll" data-offset="0"></div>
 
     <br>
 
-    <p>So we back in the mine Got our pickaxe swinging from side to side Side-side to side This task, a grueling one Hope to find some diamonds tonight, night, night Diamonds tonight</p>
-
-    <p>Heads up You hear a sound, turn around and look up Total shock fills your body Oh no, it's you again I can never forget those eyes, eyes, eyes Eyes-eyes-eyes</p>
-
-    <p>'Cause, baby, tonight The creeper's trying to steal all our stuff again 'Cause, baby, tonight Grab your pick, shovel, and bolt again (Bolt again-gain) And run, run until it's done, done Until the sun comes up in the morn' 'Cause, baby, tonight The creeper's trying to steal all our stuff again (Stuff again-gain)</p>
-
-    <p>Just when you think you're safe Overhear some hissing from right behind Right-right behind That's a nice life you have Shame it's gotta end at this time, time, time Time-time-time-time</p>
-
-    <p>Blows up Then your health bar drops and you could use a one-up Get inside, don't be tardy So now you're stuck in there Half a heart is left, but don't die, die, die Die-die-die</p>
-
-    <p>'Cause, baby, tonight The creeper's trying to steal all our stuff again 'Cause, baby, tonight Grab your pick, shovel, and bolt again (Bolt again-gain) And run, run until it's done, done Until the sun comes up in the morn' 'Cause, baby, tonight The creeper's trying to steal all our stuff again</p>
-
-    <p>Creepers, you're mine, haha Dig up diamonds, And craft those diamonds, And make some armor, Get it, baby, go and forge that like you so MLG pro The sword's made of diamonds, so come at me bro Huh? Training in your room under the torchlight Hone that form to get you ready for the big fight Every single day and the whole night Creeper's out prowlin', woo, alright Look at me, look at you Take my revenge, that's what I'm gonna do I'm a warrior, baby, what else is new? And my blade's gonna tear through you, bring it</p>
-
-    <p>'Cause, baby, tonight The creeper's trying to steal all our stuff again (Gather your stuff, yeah, let's take back the world, haha) Yeah, baby, tonight grab your sword, armor and go (It's on) Take your revenge (Woo), oh-oh-oh-oh So fight, fight, like it's the last, last night of your life, life Show them your bite (Woo)</p>
-
-    <p>'Cause, baby, tonight The creeper's trying to steal all our stuff again 'Cause, baby, tonight Grab your pick, shovel and bolt again (Bolt again-gain, woo) And run, run until it's done, done Until the sun comes up in the morn' 'Cause, baby, tonight (Come on, swing your sword up high) The creeper's trying to steal all our stuff again (Come on, jab your sword down low) (Woo)</p>
+    <p> So we back in the mine </p>
+    <p> Got our pickaxe swinging from </p>
+    <p> side to side </p>
+    <p> Side-side to side </p>
+    <p> This task, a grueling one </p>
+    <p> Hope to find some diamonds tonight, night, night </p>
+    <p> Diamonds tonight </p>
+    <p>-----------------------------------------------</p>
+    <p> Heads up </p>
+    <p> You hear a sound, turn around and look up </p>
+    <p> Total shock fills your body </p>
+    <p> Oh no, it's you again </p>
+    <p> I can never forget those </p>
+    <p> eyes, eyes, eyes, eyes-eyes-eyes </p>
+    <p>-----------------------------------------------</p>
+    <p> CAUSE BABY TONIGHT </p>
+    <p> The creeper's trying to steal all our stuff again </p>
+    <p> Cause, baby, tonight </p>
+    <p> Grab your pick, shovel, and bolt again </p>
+    <p> (Bolt again-gain) </p>
+    <p> And run, run until it's done, done </p>
+    <p> Until the sun comes up in the morn </p>
+    <p> Cause, baby, tonight </p>
+    <p> The creeper's trying to steal all our stuff again </p>
+    <p> (Stuff again-gain) </p>
+    <p>-----------------------------------------------</p>
+    <p> Just when you think you're safe </p>
+    <p> Overhear some hissing from </p>
+    <p> right behind </p>
+    <p> Right-right behind </p>
+    <p> That's a nice life you have </p>
+    <p> Shame it's gotta end at this </p>
+    <p> time, time, time </p>
+    <p> Time-time-time-time </p>
+    <p>-----------------------------------------------</p>
+    <p> Blows up </p>
+    <p> Then your health bar drops and you could use a one-up </p>
+    <p> Get inside, don't be tardy </p>
+    <p> So now you're stuck in there </p>
+    <p> Half a heart is left, but don't </p>
+    <p> die, die, die </p>
+    <p> Die-die-die </p>
+    <p>-----------------------------------------------</p>
+    <p> CAUSE BABY TONIGHT </p>
+    <p> The creeper's trying to steal all our stuff again</p>
+    <p> Cause, baby, tonight </p>
+    <p> Grab your pick, shovel, and bolt again </p>
+    <p> (Bolt again-gain)</p>
+    <p> And run, run until it's done, done </p>
+    <p> Until the sun comes up in the morn</p>
+    <p> Cause, baby, tonight </p>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
 </div>
