Adding user counter and mobile column order

--- a/client/src/app/root/root.component.html
+++ b/client/src/app/root/root.component.html
@@ -1,27 +1,21 @@
 <br>
 <div class="container-fluid" style="margin-left: 0px; margin-right: 0px">
+
   <div class="row">
-    <div class="col-md-3">
+    <div class="col-md-3 order-md-1 order-2">
       <app-lyrics></app-lyrics>
     </div>
-
-    <div class="col-md-6">
+    <div class="col-md-6 order-md-2 order-1">
       <app-chat></app-chat>
-    </div>
-
-    <div class="col-md-3">
-
-    </div>
-  </div>
-
-  <br>
-
-  <div class="row">
-    <div class="col-md-6 offset-md-3">
+      <br>
       <app-chat-form></app-chat-form>
+      <br>
+    </div>
+    <div class="col-md-3 order-md-3 order-3">
+      <app-online-users></app-online-users>
     </div>
   </div>
 
-  </div>
+</div>
 
 
