Fixing placeholder color

--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -3,3 +3,8 @@ body {
   background-color: #343233 !important;
   font-family: 'Quicksand', sans-serif !important;
 }
+
+::placeholder {
+  color: #efdab9 !important;
+  opacity: 0.7 !important;
+}
