--- a/client/src/app/chat-form/chat-form.component.html
+++ b/client/src/app/chat-form/chat-form.component.html
@@ -1,4 +1,4 @@
-<form #form="ngForm" (submit)="onSubmitMsg(form)">
+<form #form="ngForm" (submit)="onSubmitMsg(form)" autocomplete="off">
   <input type="text" style="background-color: #574b4f !important; color: #efdab9; border: none; width: 93%" class="form-control" name="message" ngModel placeholder="Sing here">
 </form>
 
