--- a/client/src/app/login/login.component.html
+++ b/client/src/app/login/login.component.html
@@ -12,7 +12,7 @@
     <div class="col-md-4 mx-auto">
       <br>
       <br>
-      <form #form="ngForm" (submit)="onSubmit(form)">
+      <form #form="ngForm" (submit)="onSubmit(form)" autocomplete="off">
         <div class="form-group">
           <input style='border: none; color: #efdab9; background-color: #574b4f !important' type="text" id="username" class="form-control bg-dark" name="user" ngModel placeholder="Nickname">
           <br>
