Adding form validation

--- a/client/src/app/login/login.component.html
+++ b/client/src/app/login/login.component.html
@@ -14,9 +14,9 @@
       <br>
       <form #form="ngForm" (submit)="onSubmit(form)" autocomplete="off">
         <div class="form-group">
-          <input style='border: none; color: #efdab9; background-color: #574b4f !important' type="text" id="username" class="form-control bg-dark" name="user" ngModel placeholder="Nickname">
+          <input style='border: none; color: #efdab9; background-color: #574b4f !important' type="text" id="username" class="form-control bg-dark" name="user" required maxlength="25" ngModel placeholder="Nickname">
           <br>
-          <input type="submit" class="btn btn-block" id="submitBtn" value="Go">
+          <input type="submit" class="btn btn-block" id="submitBtn" [disabled]="form.invalid" value="Go">
         </div>
       </form>
     </div>
