Transforming the message to lower case

--- a/client/src/app/lyrics/lyrics.component.html
+++ b/client/src/app/lyrics/lyrics.component.html
@@ -23,12 +23,12 @@
     <p> The creeper's trying to steal all our stuff again </p>
     <p> Cause, baby, tonight </p>
     <p> Grab your pick, shovel, and bolt again </p>
-    <p> (Bolt again-gain) </p>
+    <p> Bolt again-gain </p>
     <p> And run, run until it's done, done </p>
     <p> Until the sun comes up in the morn </p>
     <p> Cause, baby, tonight </p>
     <p> The creeper's trying to steal all our stuff again </p>
-    <p> (Stuff again-gain) </p>
+    <p> Stuff again-gain </p>
     <p>-----------------------------------------------</p>
     <p> Just when you think you're safe </p>
     <p> Overhear some hissing from </p>
@@ -51,7 +51,7 @@
     <p> The creeper's trying to steal all our stuff again</p>
     <p> Cause, baby, tonight </p>
     <p> Grab your pick, shovel, and bolt again </p>
-    <p> (Bolt again-gain)</p>
+    <p> Bolt again-gain</p>
     <p> And run, run until it's done, done </p>
     <p> Until the sun comes up in the morn</p>
     <p> Cause, baby, tonight </p>
