Adding the local message to the chat before sending it with socket

--- a/client/src/app/root/root.component.html
+++ b/client/src/app/root/root.component.html
@@ -6,7 +6,7 @@
       <app-lyrics></app-lyrics>
     </div>
     <div class="col-md-6 order-md-2 order-1">
-      <app-chat></app-chat>
+      <app-chat [user]="user"></app-chat>
       <br>
       <app-chat-form></app-chat-form>
       <br>
