Adding Username Validation

--- a/client/src/app/login/login.component.html
+++ b/client/src/app/login/login.component.html
@@ -22,3 +22,6 @@
     </div>
   </div>
 </div>
+<div class="alert alert-danger" style="width: fit-content; margin: auto;" role="alert" *ngIf="!validUser">
+  This nickname is already being used!
+</div>
