--- a/client/src/app/root/root.component.html
+++ b/client/src/app/root/root.component.html
@@ -13,7 +13,7 @@
     </div>
     <div class="col-md-3 order-md-3 order-3">
       <app-online-users></app-online-users>
-      <a href="https://twitter.com/scharderson" style="margin-left: 55%"><i class="fab fa-twitter fa-lg"></i> Follow me</a>
+      <a href="https://twitter.com/scharderson" target="_blank" rel="noopener noreferrer" style="margin-left: 55%"><i class="fab fa-twitter fa-lg"></i> Follow me</a>
     </div>
   </div>
 
