Finishing the song lyrics

--- a/client/src/app/lyrics/lyrics.component.html
+++ b/client/src/app/lyrics/lyrics.component.html
@@ -19,7 +19,7 @@
     <p> I can never forget those </p>
     <p> eyes, eyes, eyes, eyes-eyes-eyes </p>
     <p>----------------------------------------------</p>
-    <p> CAUSE BABY TONIGHT </p>
+    <p> Cause baby tonight </p>
     <p> The creeper's trying to steal all our stuff again </p>
     <p> Cause, baby, tonight </p>
     <p> Grab your pick, shovel, and bolt again </p>
@@ -47,7 +47,7 @@
     <p> die, die, die </p>
     <p> Die-die-die </p>
     <p>----------------------------------------------</p>
-    <p> CAUSE BABY TONIGHT </p>
+    <p> Cause baby tonight </p>
     <p> The creeper's trying to steal all our stuff again</p>
     <p> Cause, baby, tonight </p>
     <p> Grab your pick, shovel, and bolt again </p>
@@ -55,14 +55,39 @@
     <p> And run, run until it's done, done </p>
     <p> Until the sun comes up in the morn</p>
     <p> Cause, baby, tonight </p>
-    <p></p>
-    <p></p>
-    <p></p>
-    <p></p>
-    <p></p>
-    <p></p>
-    <p></p>
-    <p></p>
-    <p></p>
-    <p></p>
+    <p> The creeper's trying to steal all our stuff again (Creepers) </p>
+    <p> you're mine, haha</p>
+    <p>----------------------------------------------</p>
+    <p>Dig up diamonds</p>
+    <p>And craft those diamonds</p>
+    <p>And make some armor</p>
+    <p>Get it, baby, go and forge that like you so MLG pro</p>
+    <p>The sword's made of diamonds, so come at me bro Huh</p>
+    <p>Training in your room under the torchlight</p>
+    <p>Hone that form to get you ready for the big fight</p>
+    <p>Every single day and the whole night</p>
+    <p>Creeper's out prowlin, woo, alright</p>
+    <p>Look at me, look at you</p>
+    <p>Take my revenge, that's what I'm gonna do</p>
+    <p>I'm a warrior, baby, what else is new</p>
+    <p>And my blade's gonna tear through you (Cause baby tonight) bring it</p>
+    <p>----------------------------------------------</p>
+    <p>The creeper's trying to steal all our stuff again (Gather your stuff, yeah)</p>
+    <p>Let's take back the world (yeah baby tonight) haha</p>
+    <p>Grab your sword, armor and go (It's on)</p>
+    <p>Take your revenge (Woo)</p>
+    <p>oh-oh-oh-oh So fight, fight, like it's the last</p>
+    <p>last night of your life, life</p>
+    <p>Show them your bite (Woo)</p>
+    <p>----------------------------------------------</p>
+    <p>Cause, baby, tonight (ah ah)</p>
+    <p>(ah ah) The creeper's trying to steal all our stuff again</p>
+    <p>Cause, baby, tonight</p>
+    <p>Grab your pick, shovel and bolt again (Bolt again-gain, woo)</p>
+    <p>And run run until it's done, done</p>
+    <p>Until the sun comes up in the morn</p>
+    <p>Cause baby, tonight</p>
+    <p>(Come on, swing your sword up high) The creeper's trying to steal all our stuff again (Come on, jab your sword down low)</p>
+    <p>Woo</p>
+
 </div>
